--- a/Cargos/templates/cargos/cargo_confirm_delete.html
+++ b/Cargos/templates/cargos/cargo_confirm_delete.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block page_title %}
-    <h1>Excluir Carregamento</h1>
+    Excluir Carregamento
 {% endblock page_title %}
 
 {% block content %}
