--- a/templates/main.html
+++ b/templates/main.html
@@ -6,10 +6,11 @@
     <title>{% block page_title %}{% endblock page_title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body style="background-color: #b3d3ff">
+  <body style="background-color: #b3d3ff; font-family: Georgia">
     <nav class="navbar navbar-expand-lg text-warning" style="background-color: #74a4fd">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><strong>Painel de Controle</strong></a>
+        <a class="navbar-brand" href="lista_de_carregamentos"><strong>Carregamentos</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,21 +27,7 @@
                 <li><a class="dropdown-item" href="#">Motorista</a></li>
               </ul>
             </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <strong>Carregamentos</strong>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="create">Novo Carregamento</a></li>
-                <li><a class="dropdown-item" href="list">Listar Carregamentos</a></li>
-              </ul>
-            </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Procurar Funcionalidade" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Procurar</button>
-          </form>
         </div>
       </div>
     </nav>
