--- a/Cargos/templates/cargos/cargo_confirm_delete.html
+++ b/Cargos/templates/cargos/cargo_confirm_delete.html
@@ -7,22 +7,22 @@
 
 
 {% block content %}
-  <h1>Excluir Carregamento</h1>
   <br>
-  <main class="container-fluid">
-    <table class="table table-striped table-hover" style="border-radius:2%; box-shadow: 0 0 10px #000; bg-color: #F7F2E7; border-radius: 15px; overflow: hidden; border: 3px #000;">
+  <h1 align="center"><strong>EXCLUIR CARREGAMENTO</strong></h1>
+  <br>
+    <table class="table table-striped table-hover" style="border-radius:2%; box-shadow: 0 0 10px #000; bg-color: #F7F2E7; border-radius: 15px; overflow: hidden; border: 3px #000; font-family: Trebuchet MS">
       <thead>
         <tr align="center">
           <th scope="col">ID</th>
-          <th scope="col">Data Envio</th>
-          <th scope="col">Data de Recebimento</th>
-          <th scope="col">Empresa de Origem</th>
-          <th scope="col">Empresa de Destino</th>
-          <th scope="col">Quantidade de Pallets</th>
-          <th scope="col">Venda ou Descarte</th>
-          <th scope="col">Motorista</th>
-          <th scope="col">Número da Nota Fiscal</th>
-          <th scope="col">Ação</th>
+          <th scope="col">DATA DE ENVIO</th>
+          <th scope="col">DATA DE RECEBIMENTO</th>
+          <th scope="col">EMPRESA DE ORIGEM</th>
+          <th scope="col">EMPRESA DE DESTINO</th>
+          <th scope="col">QUANTIDADE DE PALLETS</th>
+          <th scope="col">VENDA OU DESCARTE</th>
+          <th scope="col">MOTORISTA</th>
+          <th scope="col">Nº DA NOTA FISCAL</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody class="table-group-divider">
@@ -46,13 +46,12 @@
             <form method="POST">
               {% csrf_token %}
               {{ form|crispy }}
-              <button type="submit" class="btn btn-danger">Excluir</button>
-              <a href="{% url 'cargo_list' %}" class="btn btn-primary">Voltar</a>
+              <button type="submit" class="btn btn-danger" style="border: 2px solid #000">EXCLUIR</button>
+              <a href="{% url 'cargo_list' %}" class="btn btn-primary" style="border: 2px solid #000">VOLTAR</a>
             </form>
           </td>
         </tr>
       </tbody>
     </table>
-  </main>
 
 {% endblock content %}
