--- a/companys/templates/companys/driver_confirm_delete.html
+++ b/companys/templates/companys/driver_confirm_delete.html
@@ -2,38 +2,34 @@
 {% load crispy_forms_tags %}
 
 {% block page_title %}
-    Excluir Empresa
+    Excluir Motorista
 {% endblock page_title %}
 
 
 {% block content %}
   <br>
-  <h1 align="center"><strong>EXCLUIR EMPRESA</strong></h1>
+  <h1 align="center"><strong>EXCLUIR MOTORISTA</strong></h1>
   <br>
     <table class="table table-striped table-hover" style="border-radius:2%; box-shadow: 0 0 10px #000; bg-color: #F7F2E7; border-radius: 15px; overflow: hidden; border: 3px #000; font-family: Trebuchet MS">
       <thead>
         <tr align="center">
           <th scope="col">ID</th>
-          <th scope="col">CNPJ</th>
+          <th scope="col">NOME</th>
           <th scope="col">ENDEREÇO</th>
-          <th scope="col">SALDO DE PALLETS</th>
-          <th scope="col">ESTOQUE DE PALLETS</th>
           <th scope="col"></th>
         </tr>
       </thead>
       <tbody class="table-group-divider">
         <tr align="center">
-          <th scope="row">{{ company.pk }}</th>
-          <td>{{ company.name }}</td>
-          <td>{{ company.address }}</td>
-          <td>{{ company.pallets_balance }}</td>
-          <td>{{ company.pallets_storage }}</td>
+          <th scope="row">{{ driver.pk }}</th>
+          <td>{{ driver.name }}</td>
+          <td>{{ driver.address }}</td>
           <td>
             <form method="POST">
               {% csrf_token %}
               {{ form|crispy }}
               <button type="submit" class="btn btn-danger" style="border: 2px solid #000">EXCLUIR</button>
-              <a href="{% url 'company_list' %}" class="btn btn-primary" style="border: 2px solid #000">VOLTAR</a>
+              <a href="{% url 'driver_list' %}" class="btn btn-primary" style="border: 2px solid #000">VOLTAR</a>
             </form>
           </td>
         </tr>
