--- a/companys/templates/companys/driver_form.html
+++ b/companys/templates/companys/driver_form.html
@@ -2,19 +2,19 @@
 {% load crispy_forms_tags %}
 
 {% block page_title %}
-  {% if company.pk %}
-    Editar Empresa
+  {% if driver.pk %}
+    Editar Motorista
   {% else %}
-    Nova Empresa
+    Novo Motorista
   {% endif %}
 {% endblock page_title %}
 
 {% block content %}
   <br>
-  {% if company.pk %}
-    <h1 align="center"><strong>EDITAR EMPRESA</strong></h1><br>
+  {% if driver.pk %}
+    <h1 align="center"><strong>EDITAR MOTORISTA</strong></h1><br>
   {% else %}
-    <h1 align="center"><strong>NOVA EMPRESA</strong></h1><br>
+    <h1 align="center"><strong>NOVO MOTORISTA</strong></h1><br>
   {% endif %}
   <main class="container" style="box-shadow: 0 0 10px #000; width: 30%; margin: auto; border: 1px solid #000; border-radius: 2%; background-color: #F7F2E7">
     <br>
@@ -22,7 +22,7 @@
       {% csrf_token %}
       <strong> {{ form|crispy }} </strong>
       <button type="submit" style="border: 2px solid #000" class="btn btn-success">SALVAR</button>
-      <a href="{% url 'company_list' %}" style="border: 2px solid #000" class="btn btn-secondary">VOLTAR</a>
+      <a href="{% url 'driver_list' %}" style="border: 2px solid #000" class="btn btn-secondary">VOLTAR</a>
     </form>
     <br>
   </main>
