--- a/templates/main.html
+++ b/templates/main.html
@@ -4,34 +4,227 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block page_title %}{% endblock page_title %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body style="background-color: #b3d3ff; font-family: Georgia">
-    <nav class="navbar navbar-expand-lg text-warning" style="background-color: #74a4fd">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"><strong>Painel de Controle</strong></a>
-        <a class="navbar-brand" href="lista_de_carregamentos"><strong>Carregamentos</strong></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <strong>Cadastros</strong>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Filial da Reiter</a></li>
-                <li><a class="dropdown-item" href="#">Filial de Embarcadora</a></li>
-                <li><a class="dropdown-item" href="#">Filial de Cliente Final</a></li>
-                <li><a class="dropdown-item" href="#">Motorista</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    {% block content %}{% endblock content %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
+        <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+    <style>
+      @import url(https://fonts.googleapis.com/css?family=Raleway:500);
+      .nav{
+        height:100%;
+        position:fixed;
+        left:-2em;
+        top:0;
+        z-index:1000;
+        transform-style:preserve-3d;
+        perspective:1000px;
+      }
+      .icon{
+        position:absolute;
+        left:0;
+        top:0;
+        z-index:990;
+        height:100%;
+        background:hsla(0,0%,15%,1);
+
+          & li{
+          border-bottom:1px solid hsla(0,0%,0%,.3);
+          list-style-type:none;
+          }
+          & a{
+            display:block;
+            width:64px;
+            height:64px;
+            line-height:64px;
+            text-align:center;
+            font-size:1.6em;
+            color:hsla(0,0%,60%,1);
+            text-shadow:0 1px 0 hsla(0,0%,0%,1);
+            transition:all .5s ease-out;
+
+              &:hover{
+                color:hsla(255,255%,255%,1);
+                transform:translateX(10px) scale(1.2)
+              }
+          }
+      }
+
+      .nav:hover .text{
+        transform:rotateY(0deg)
+      }
+      .text{
+        position:absolute;
+        left:63px;
+        top:0;
+        z-index:980;
+        height:100%;
+        background:hsla(0,0%,15%,1);
+        border-right:1px solid hsla(0,0%,0%,.3);
+        transition:transform .24s linear;
+        backface-visibility:hidden;
+        transform-origin:left;
+        transform:perspective(1000px) rotateY(90deg);
+
+          & li{
+            border-bottom:1px solid hsla(0,0%,0%,.3);
+          }
+          & a{
+            display:block;
+            width:200px;
+            height:64px;
+            line-height:64px;
+            text-indent:1em;
+            font-size:1.4em;
+            text-decoration:none;
+            color:hsla(0,0%,60%,1);
+            text-shadow:0 1px 0 hsla(0,0%,0%,1);
+            transition:all .5s ease;
+
+               &:hover{
+                  color:hsla(255,255%,255%,1);
+                  transform:translateX(-14px)
+               }
+          }
+      }
+
+      .nav:hover .info{
+        left:0;opacity:1;
+        transition:opacity .5s ease-in .1s
+      }
+      .info{
+        position:absolute;
+        padding-left:2em;
+        bottom:30px;
+        z-index:999;
+        width:264px;
+        color:hsla(255,255%,255%,1);
+        text-align:center;
+        line-height:1.6;
+        opacity:0;
+
+          .logo p{
+            width:100px;
+            height:100px;
+            margin:0 auto;
+            background:hsla(0,0%,15%,1);
+            color:hsla(0,0%,26%,1);
+            opacity:.6;
+            overflow:hidden;
+            text-align:center;
+            transition:all .5s ease;
+            font-size:2em;
+            text-shadow:-1px -1px hsla(0,0%,31%,1),1px 1px hsla(0,0%,7%,1);
+
+            &:hover{
+              opacity:1;
+              color:hsla(255,255%,255%,1);
+              text-shadow:-1px -1px hsla(0,0%,34%,1),
+                1px 1px hsla(0,0%,7%,1);
+            }
+          }
+        .name{
+          font-size:2em;
+          font-weight:bold;
+          letter-spacing:2px;
+          color:hsla(0,0%,26%,1);
+          text-shadow:-1px -1px hsla(0,0%,31%,1),
+            1px 1px hsla(0,0%,7%,1);
+        }
+        .quote{
+          color:#444;
+          text-shadow:1px 1px hsla(0,0%,7%,1);
+        }
+        .social a{
+          font-size:2em;
+          color:hsla(0,0%,20%,1);
+          letter-spacing:.5em;
+          text-shadow:1px 1px hsla(0,0%,27%,1),
+            -1px -1px hsla(0,0%,7%,1);
+          transition:all .5s ease;
+
+            &:hover{
+              color:hsla(255,255%,255%,1);
+              text-shadow:-1px -1px hsla(0,0%,34%,1),
+                1px 1px hsla(0,0%,7%,1);
+            }
+         }
+      }
+      /*
+      Only added a nav query for height bc width is fine
+      (covers full width of viewport from 270px) down to 220px.
+      Bottom nav info section is hidden when screen height
+      hits 550px or below.  Nav still functions as a fly-out
+      */
+
+      @media screen and ( max-height:550px ){
+          .info{
+            display:none;
+          }
+      }
+      @media screen and ( max-width:450px ){
+          h1{
+            font-size:7.5vw;
+          }
+      }
+
+      .seven h1 {
+        text-align: center;
+            font-size:40px; font-weight:300; color:#222; letter-spacing:1px;
+            text-transform: uppercase;
+
+            display: grid;
+            grid-template-columns: 1fr max-content 1fr;
+            grid-template-rows: 27px 0;
+            grid-gap: 20px;
+            align-items: center;
+        }
+
+        .seven h1:after,.seven h1:before {
+            content: " ";
+            display: block;
+            border-bottom: 1px solid #000;
+            border-top: 1px solid #000;
+            height: 5px;
+          background-color:#f8f8f8;
+      }
+
+    </style>
+  </head>
+  <body style="margin-left:3%; padding:0; background:hsla(212, 5%, 95%, 1); font-family: Georgia; overflow:auto">
+    <div id="nav" class="nav">
+	  <div class="icon">
+	    <ul>
+		  <li><a title="Home" href="#"><i class="fa fa-bar-chart "></i></a></li>
+		  <li><a href="lista_de_carregamentos"><i class="fa fa-truck "></i></a></li>
+		  <li><a href="lista_de_empresas"><i class="fa fa-institution"></i></a></li>
+		  <li><a href="lista_de_motoristas"><i class="fa fa-group "></i></a></li>
+		</ul>
+	  </div>
+	  <div class="text">
+	    <ul>
+		  <li><a title="Home" href="#">Painel</a></li>
+		  <li><a href="lista_de_carregamentos">Carregamentos</a></li>
+	      <li><a href="lista_de_empresas" >Empresas</a></li>
+	      <li><a href="lista_de_motoristas" >Motoristas</a></li>
+        </ul>
+      </div>
+	  <div class="info">
+	    <!--<div class="logo"><p>LOGO</p></div>-->
+		<div class="name">Hospital do Computador</div>
+		<div class="quote">QUEM SOMOS E O QUE FAZEMOS?</div>
+		<div class="social">
+		  <a target="_blank" href="https://www.instagram.com/hospitaldocomputador.ceilandia/"><i class="fa fa-instagram"></i></a>
+		</div>
+	  </div>
+	</div>
+    <main class="container-fluid">
+      {% block content %}{% endblock content %}
+    </main>
   </body>
+  <script>
+      var table = new DataTable('#myTable', {language: {url: 'https://cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json'}})
+  </script>
 </html>
