Vales e Regras de Negócio

--- a/templates/main.html
+++ b/templates/main.html
@@ -201,6 +201,7 @@
 		  <li><a href="lista_de_carregamentos"><i class="fa fa-truck "></i></a></li>
 		  <li><a href="lista_de_empresas"><i class="fa fa-institution"></i></a></li>
 		  <li><a href="lista_de_motoristas"><i class="fa fa-group "></i></a></li>
+          <li><a href="lista_de_vales"><i class="fa fa-credit-card "></i></a></li>
 		</ul>
 	  </div>
 	  <div class="text">
@@ -209,6 +210,7 @@
 		  <li><a href="lista_de_carregamentos">Carregamentos</a></li>
 	      <li><a href="lista_de_empresas" >Empresas</a></li>
 	      <li><a href="lista_de_motoristas" >Motoristas</a></li>
+          <li><a href="lista_de_vales" >Vale Pallet</a></li>
         </ul>
       </div>
 	  <div class="info">
