--- a/Cargos/templates/cargos/cargo_form.html
+++ b/Cargos/templates/cargos/cargo_form.html
@@ -12,9 +12,9 @@
 {% block content %}
   <br>
   {% if cargo.pk %}
-    <h1 align="center"><strong>EDITAR CARREGAMENTO</strong></h1><br>
+    <h1 align="center" class="seven">EDITAR CARREGAMENTO</h1><br>
   {% else %}
-    <h1 align="center"><strong>NOVO CARREGAMENTO</strong></h1><br>
+    <h1 align="center" class="seven">NOVO CARREGAMENTO</h1><br>
   {% endif %}
   <main class="container" style="box-shadow: 0 0 10px #000; width: 30%; margin: auto; border: 1px solid #000; border-radius: 2%; background-color: #F7F2E7">
     <br>
