--- a/Cargos/templates/cargos/cargo_list.html
+++ b/Cargos/templates/cargos/cargo_list.html
@@ -6,10 +6,11 @@
 {% block content %}
   <br>
   <div class="seven">
-    <h1>CONTROLE DE PALLETS</h1>
+    <h1>LISTA DE CARREGAMENTOS</h1>
   </div>
   <a href="{% url 'cargo_create' %}" class="btn btn-success" style="border: 2px solid #000; margin-bottom: 12px; font-family: Trebuchet MS"><strong>NOVO CARREGAMENTO</strong></a>
-  <table id="myTable" class="display table table-striped table-hover" style="border-radius:2%; box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; border-radius: 15px; overflow: hidden; border: 3px #000; font-family: Trebuchet MS">
+  <div class="table-responsive">
+  <table id="myTable" class="display table table-striped table-hover" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; border-radius: 15px; overflow: hidden; border: 3px #000; font-family: Trebuchet MS">
     <thead>
       <tr align="center">
         <th scope="col">PLACA</th>
@@ -17,7 +18,7 @@
         <th scope="col">Nº NF</th>
         <th scope="col">MOTORISTA</th>
         <th scope="col">DATA ENVIO</th>
-        <th scope="col">DATA ENTREGA</th>
+        <th scope="col">DATA RECEBIMENTO</th>
         <th scope="col">ORIGEM</th>
         <th scope="col">DESTINO</th>
         <th scope="col">VENDA/DESCARTE</th>
@@ -58,5 +59,6 @@
       {% endfor %}
     </tbody>
   </table>
+  </div>
 {% endblock content %}
 
