--- a/companys/templates/companys/company_list.html
+++ b/companys/templates/companys/company_list.html
@@ -5,7 +5,7 @@
 {% endblock page_title %}
 {% block content %}
 <br><div class="seven">
-    <h1>EMPRESAS CADASTRADAS</h1>
+    <h1>LISTA DE EMPRESAS</h1>
   </div>
   <a href="{% url 'company_create' %}" class="btn btn-success" style="border: 2px solid #000; margin-bottom: 12px; font-family: Trebuchet MS"><strong>NOVA EMPRESA</strong></a>
   <div>
