Organizando as rotas e templates

--- a/Cargos/templates/cargos/cargo_list.html
+++ b/Cargos/templates/cargos/cargo_list.html
@@ -26,7 +26,7 @@
         <th scope="col"></th>
       </tr>
     </thead>
-    <tbody class="table-group-divider">
+    <tbody>
       {% for cargo in cargo_list %}
         <tr>
           <th scope="row">{{ cargo.vehicle_plate }}</th>
