--- a/Cargos/templates/cargos/debt_list.html
+++ b/Cargos/templates/cargos/debt_list.html
@@ -6,25 +6,33 @@
 {% block content %}
   <br>
   <div class="seven">
-    <h1>DÍVIDAS DA FILIAL</h1>
+    <h1>{{ company.name }}</h1>
   </div>
   <a href="{% url 'company_list' %}" class="btn btn-primary" style="border: 2px solid #000; margin-bottom: 12px; font-family: Trebuchet MS"><strong>VOLTAR</strong></a>
   <div>
     <table id="myTable" class="display table table-striped table-hover" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; border-radius: 15px; overflow: hidden; border: 3px #000; font-family: Trebuchet MS">
       <thead>
         <tr>
-          <th scope="col">ID</th>
-          <th scope="col">EMPRESA DEVEDORA</th>
-          <th scope="col">EMPRESA CREDORA</th>
+          <th scope="col">
+            {% if company.is_reiter_branch %}
+              EMPRESA CREDORA
+            {% else %}
+              FILIAL DEVEDORA
+            {% endif %}
+          </th>
           <th scope="col">QUANTIDADE</th>
         </tr>
       </thead>
       <tbody>
         {% for debt in debt_list %}
           <tr>
-            <th scope="row">{{ debt.id }}</th>
-            <td>{{ debt.debtor }}</td>
-            <td>{{ debt.creditor }}</td>
+            <td>
+              {% if company.is_reiter_branch %}
+                {{ debt.creditor }}
+              {% else %}
+                {{ debt.debtor }}
+              {% endif %}
+            </td>
             <td>{{ debt.amount }}</td>
           </tr>
         {% endfor %}
