--- a/templates/main.html
+++ b/templates/main.html
@@ -7,12 +7,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
-        <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.css"/>
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
     <style>
       @import url(https://fonts.googleapis.com/css?family=Raleway:500);
+      .align-center {
+        text-align: left !important;
+      }
       .nav{
         height:100%;
         position:fixed;
@@ -197,18 +200,16 @@
     <div id="nav" class="nav">
 	  <div class="icon">
 	    <ul>
-		  <li><a title="Home" href="#"><i class="fa fa-bar-chart "></i></a></li>
-		  <li><a href="lista_de_carregamentos"><i class="fa fa-truck "></i></a></li>
-		  <li><a href="lista_de_empresas"><i class="fa fa-institution"></i></a></li>
-          <li><a href="lista_de_vales"><i class="fa fa-credit-card "></i></a></li>
+		  <li><a href="/ "><i class="fa fa-truck "></i></a></li>
+		  <li><a href="/lista_de_empresas"><i class="fa fa-institution"></i></a></li>
+          <li><a href="/lista_de_vales"><i class="fa fa-credit-card "></i></a></li>
 		</ul>
 	  </div>
 	  <div class="text">
 	    <ul>
-		  <li><a title="Home" href="#">Painel</a></li>
-		  <li><a href="lista_de_carregamentos">Carregamentos</a></li>
-	      <li><a href="lista_de_empresas" >Empresas</a></li>
-          <li><a href="lista_de_vales" >Vale Pallet</a></li>
+		  <li><a href="/ ">Carregamentos</a></li>
+	      <li><a href="/lista_de_empresas" >Empresas</a></li>
+          <li><a href="/lista_de_vales" >Vale Pallet</a></li>
         </ul>
       </div>
 	  <div class="info">
@@ -225,6 +226,9 @@
     </main>
   </body>
   <script>
-      var table = new DataTable('#myTable', {language: {url: 'https://cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json'}})
+    var table = new DataTable('#myTable', {
+      language: {url: 'https://cdn.datatables.net/plug-ins/2.0.3/i18n/pt-BR.json'},
+      columnDefs: [{ className: 'align-center', targets: '_all' }]
+    });
   </script>
 </html>
