--- a/Cargos/templates/cargos/cargo_list.html
+++ b/Cargos/templates/cargos/cargo_list.html
@@ -13,8 +13,9 @@
   <table id="myTable" class="display table table-striped table-hover" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; border-radius: 15px; overflow: hidden; border: 3px #000; font-family: Trebuchet MS">
     <thead>
       <tr>
+        <th scope="col">ID</th>
         <th scope="col">PLACA</th>
-        <th scope="col">QUANTIDADE</th>
+        <th scope="col">QTD</th>
         <th scope="col">Nº NF</th>
         <th scope="col">MOTORISTA</th>
         <th scope="col">ENVIO</th>
@@ -22,16 +23,17 @@
         <th scope="col">ORIGEM</th>
         <th scope="col">DESTINO</th>
         <th scope="col">VENDA/DESCARTE</th>
-        <th scope="col">VALE PALLET</th>
+        <th scope="col">VALE</th>
         <th scope="col">EMBARCADOR</th>
-        <th scope="col">FILIAL</th>
+        <th scope="col">FILIAL RESPONSÁVEL</th>
         <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
       {% for cargo in cargo_list %}
         <tr>
-          <th scope="row">{{ cargo.vehicle_plate }}</th>
+          <th scope="row">{{ cargo.pk }}</th>
+          <td>{{ cargo.vehicle_plate }}</td>
           <td>{{ cargo.pallets_quantity }}</td>
           <td>{{ cargo.number_nf|default:"-" }}</td>
           <td>{{ cargo.driver }}</td>
