Corrigindo controle de divida

--- a/Cargos/templates/cargos/cargo_list.html
+++ b/Cargos/templates/cargos/cargo_list.html
@@ -6,7 +6,7 @@
 {% block content %}
   <br>
   <div class="seven">
-    <h1>CONTROLE DE PALLETS</h1>
+    <h1>CARREGAMENTOS</h1>
   </div>
   <a href="{% url 'cargo_create' %}" class="btn btn-success" style="border: 2px solid #000; margin-bottom: 12px; font-family: Trebuchet MS"><strong>NOVO CARREGAMENTO</strong></a>
   <div class="table-responsive">
