--- a/Cargos/templates/cargos/voucher_list.html
+++ b/Cargos/templates/cargos/voucher_list.html
@@ -6,7 +6,7 @@
 {% block content %}
   <br>
   <div class="seven">
-    <h1>LISTA DE VALES</h1>
+    <h1>VALES</h1>
   </div>
   <a href="{% url 'voucher_create' %}" class="btn btn-success" style="border: 2px solid #000; margin-bottom: 12px; font-family: Trebuchet MS"><strong>NOVO VALE</strong></a>
   <table id="myTable" class="display table table-striped table-hover" style="border-radius:2%; box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; border-radius: 15px; overflow: hidden; border: 3px #000; font-family: Trebuchet MS">
