Removendo bugs no controle de dívidas

--- a/Cargos/templates/cargos/cargo_list.html
+++ b/Cargos/templates/cargos/cargo_list.html
@@ -22,10 +22,10 @@
         <th scope="col">RECEBIMENTO</th>
         <th scope="col">ORIGEM</th>
         <th scope="col">DESTINO</th>
-        <th scope="col">VENDA/DESCARTE</th>
+        <th scope="col">VENDA/DESC</th>
         <th scope="col">VALE</th>
         <th scope="col">EMBARCADOR</th>
-        <th scope="col">FILIAL RESPONSÁVEL</th>
+        <th scope="col">FILIAL RESPONS</th>
         <th scope="col"></th>
       </tr>
     </thead>
